SEOBNR: Update factorized mode notebook to output a Python function computing values and returning a dictionary.  Not yet validated against LALSuite.

--- a/in_progress/Tutorial-SEOBNR_Factorized_Modes.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Factorized_Modes.ipynb
@@ -44,12 +44,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='inputvariables'></a>\n",
+    "<a id='toc'></a>\n",
     "\n",
-    "# Input variables \\[Back to [top](#toc)\\]\n",
-    "$$\\label{step1}$$\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
     "\n",
-    "We define the input variables."
+    "This notebook is organized as follows:\n",
+    "\n",
+    "1. [Step 0](#outputcreation): Creating the output directory for SEOBNR\n",
+    "1. [Step 1](#commonterms): Common terms\n",
+    "1. [Step 2](#fmodes): Factorized modes\n",
+    "1. [Step 3](#validation): Validation\n",
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='outputcreation'></a>\n",
+    "\n",
+    "# Step 0: Creating the output directory for SEOBNR \\[Back to [top](#toc)\\]\n",
+    "$$\\label{outputcreation}$$\n",
+    "\n",
+    "First we create the output directory for SEOBNR (if it does not already exist):"
    ]
   },
   {
@@ -58,28 +76,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The resummed factorized modes for the spinning effective one-body formulation\n",
-    "# See Taracchini et. al. (2012): https://arxiv.org/abs/1202.0790\n",
+    "# Get cmdline_helper; remove when this notebook is finalized and removed from in_progress\n",
+    "import sys\n",
+    "# insert at 1, 0 is the script path (or '' in REPL)\n",
+    "sys.path.insert(1, '../')\n",
     "\n",
-    "import numpy as np\n",
+    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "\n",
-    "#Input variables: will eventually want to read in from another file?\n",
-    "m1 = 10.\n",
-    "m2 = 15.\n",
-    "eta = 0.24000000000000002\n",
-    "chiS = 0.020800681907460566\n",
-    "chiA = -0.05685619431741816\n",
-    "a = 0.01024299840812406"
+    "# Create C code output directory:\n",
+    "Ccodesdir = \"SEOBNR\"\n",
+    "# Then create an output directory in case it does not exist\n",
+    "cmd.mkdir(Ccodesdir)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='deltam'></a>\n",
+    "<a id='commonterms'></a>\n",
     "\n",
-    "# Common terms \\[Back to [top](#toc)\\]\n",
-    "$$\\label{deltam}$$\n",
+    "# Step 1: Common terms \\[Back to [top](#toc)\\]\n",
+    "$$\\label{commonterms}$$\n",
     "\n",
     "We define the following terms that are used repeatedly in the factorized modes.  From [T2012](https://arxiv.org/abs/1202.0790) Equation (A7a):\n",
     "\n",
@@ -92,12 +109,20 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting SEOBNR/Factorized_modes-expressions.txt\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile $Ccodesdir/Factorized_modes-expressions.txt\n",
     "deltam = (m1 - m2)/(m1 + m2)\n",
     "deltam2 = deltam*deltam\n",
     "\n",
-    "#Not to be confused with constants a1, a2, etc... may need better naming convention?\n",
     "a2 = a*a\n",
     "a3 = a2*a\n",
     "a4 = a3*a\n",
@@ -116,10 +141,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='modes'></a>\n",
+    "<a id='fmodes'></a>\n",
     "\n",
-    "## The factorized modes\n",
-    "$$\\label{modes}$$\n",
+    "# Step 2: The factorized modes \\[Back to [top](#toc)\\]\n",
+    "$$\\label{fmodes}$$\n",
     "\n",
     "We will write the coefficient (on each power of $v$) separately, following the formulation in [T2012](https://arxiv.org/abs/1202.0790) Equation (A8a):\n",
     "\n",
@@ -130,14 +155,24 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to SEOBNR/Factorized_modes-expressions.txt\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile -a $Ccodesdir/Factorized_modes-expressions.txt\n",
+    "\n",
     "rho22v2 = 55.*eta/84. - 43./42\n",
     "rho22v3 = 2.*(chiS*(1 - eta) + chiA*deltam)/3.\n",
     "rho22v4 = 1./2.*(chiS + chiA*deltam) + 19583.*eta2/42336. - 33025.*eta/21168. - 20555./10584.\n",
     "rho22v5 = -34.*a/21.\n",
     "rho22v6 = (1556919113./122245200. + (89.*a2)/252. - (48993925.*eta)/9779616. - (6292061.*eta2)/3259872.\n",
-    "           + (10620745.*eta3)/39118464. + (41.*eta*np.pi*np.pi)/192.)\n",
+    "           + (10620745.*eta3)/39118464. + (41.*eta*sp.pi*sp.pi)/192.)\n",
     "rho22v6l = -428./105.\n",
     "rho22v7 = (18733.*a)/15876. + a3/3.\n",
     "rho22v8 = -387216563023./160190110080. + (18353.*a2)/21168. - a*4/8.\n",
@@ -145,7 +180,7 @@
     "rho22v10 = -16094530514677./533967033600.\n",
     "rho22v10l = 439877./55566.\n",
     "\n",
-    "rho21v1 = 0.0\n",
+    "rho21v1 = 0.\n",
     "rho21v2 = -59./56. + (23.*eta)/84.\n",
     "rho21v3 = 0.\n",
     "rho21v4 = -47009./56448. - (865.*a2)/1792. - (405.*a4)/2048. - (10993.*eta)/14112. + (617.*eta2)/4704.\n",
@@ -175,10 +210,10 @@
     "f33v3 = (chiS*deltam*(-4. + 5.*eta) + chiA*(-4. + 19.*eta))/(2.*deltam)\n",
     "\n",
     "rho32v = (4.*chiS*eta)/(-3.*(m1 + 3*eta))\n",
-    "rho32v2 = (-4.*a2*eta2)/(9.*np.power(m1 + 3*eta,2)) + (328. - 1115.*eta + 320.*eta2)/(270.*m1p3eta)\n",
+    "rho32v2 = (-4.*a2*eta2)/(9.*m1p3eta*m1p3eta) + (328. - 1115.*eta + 320.*eta2)/(270.*m1p3eta)\n",
     "rho32v3 = 2./9.*a\n",
     "rho32v4 = a2/3. + (-1444528. + 8050045.*eta - 4725605.*eta2 - 20338960.*eta3\n",
-    "                   + 3085640.*eta4)/np.power(1603800.*m1p3eta,2)\n",
+    "                   + 3085640.*eta4)/(1603800.*m1p3eta*m1p3eta)\n",
     "rho32v5 = (-2788.*a)/1215.\n",
     "rho32v6 = 5849948554./940355325. + (488.*a2)/405.\n",
     "rho32v6l = -104./63.\n",
@@ -205,7 +240,7 @@
     "rho44v6 = 16600939332793./1098809712000. + (217.*a2)/3960.\n",
     "rho44v6l = -12568./3465.\n",
     "\n",
-    "rho43v = 0.0\n",
+    "rho43v = 0.\n",
     "rho43v2 = (222. - 547.*eta + 160.*eta2)/(176.*(-1. + 2.*eta))\n",
     "rho43v4 = -6894273./7047040. + (3.*a2)/8.\n",
     "rho43v5 = (-12113.*a)/6160.\n",
@@ -311,8 +346,76 @@
     "\n",
     "rho82v2 = (2462. - 17598.*eta + 37119.*eta2 - 22845.*eta3 + 3063.*eta4)/(2736.*(-1. + 7.*eta - 14.*eta2 + 7.*eta3))\n",
     "\n",
-    "rho81v2 = (20022. - 126451.*eta + 236922.*eta2 - 138430.*eta3 + 21640.*eta4)/(18240.*(-1. + 6.*eta - 10.*eta2\n",
-    "                                                                                      + 4.*eta3))"
+    "rho81v2 = (20022.-126451.*eta+236922.*eta2 - 138430.*eta3 + 21640.*eta4)/(18240.*(-1. + 6.*eta - 10.*eta2 + 4.*eta3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='validation'></a>\n",
+    "\n",
+    "# Step 3: Validation \\[Back to [top](#toc)\\]\n",
+    "$$\\label{validation}$$\n",
+    "\n",
+    "The following code cell reverses the order of the expressions output to SEOBNR/Hamiltonian_on_top.txt and creates a Python function to validate the value of $H_{\\rm real}$ against the SEOBNRv3 Hamiltonian value computed in LALSuite git commit bba40f21e9 for command-line input parameters\n",
+    "\n",
+    "-M 23 -m 10 -f 20 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import difflib, os\n",
+    "\n",
+    "# The modes are sometimes written on more than one line for readability in this Jupyter notebook.\n",
+    "# We first create a file of one-line expressions, SEOBNR-one_line_factorized_modes.txt.\n",
+    "with open(os.path.join(Ccodesdir,\"Factorized_modes-one_line_expressions.txt\"), \"w\") as output:\n",
+    "    count = 0\n",
+    "    # Read output of this notebook\n",
+    "    for line in list(open(os.path.join(Ccodesdir,\"Factorized_modes-expressions.txt\"))):\n",
+    "        # Read the first line\n",
+    "        if count == 0:\n",
+    "            prevline=line\n",
+    "        #Check if prevline is a complete expression\n",
+    "        elif \"=\" in prevline and \"=\" in line:\n",
+    "            output.write(\"%s\\n\" % prevline.strip('\\n'))\n",
+    "            prevline=line\n",
+    "        # Check if line needs to be adjoined to prevline\n",
+    "        elif \"=\" in prevline and not \"=\" in line:\n",
+    "            prevline = prevline.strip('\\n')\n",
+    "            prevline = (prevline+line).replace(\" \",\"\")\n",
+    "        # Be sure to print the last line.\n",
+    "        if count == len(list(open(os.path.join(Ccodesdir,\"Factorized_modes-expressions.txt\"))))-1:\n",
+    "            if not \"=\" in line:\n",
+    "                print(\"ERROR. Algorithm not robust if there is no equals sign on the final line. Sorry.\")\n",
+    "                sys.exit(1)\n",
+    "            else:\n",
+    "                output.write(\"%s\" % line)\n",
+    "        count = count + 1\n",
+    "\n",
+    "# Now write the expressions in a function\n",
+    "# We want to return each mode, so we will store them in a dictionary\n",
+    "with open(os.path.join(Ccodesdir,\"Factorized_modes.py\"), \"w\") as output:\n",
+    "    #m1=23., m2=10., EMgamma=0.577215664901532860606512090082402431, tortoise=1, dSO=-7.966696593617955e+01, dSS=1.261873764525631e+01, x=2.129681018601393e+01, y=0.000000000000000e+00, z=0.000000000000000e+00, p1=0.000000000000000e+00, p2=2.335391115580442e-01, p3=-4.235164736271502e-22, S1x=4.857667584940312e-03, S1y=9.715161660389764e-03, S1z=-1.457311842632286e-02, S2x=3.673094582185491e-03, S2y=-4.591302628615413e-03, S2z=5.509696538546906e-03)\n",
+    "    output.write(\"import numpy as np\\ndef compute_modes(m1=23., m2=10., a=0.1, eta=.25, chiA=0.1, chiS=0.1):\\n\\tmodes={}\\n\")\n",
+    "    for line in list(open(os.path.join(Ccodesdir,\"Factorized_modes-one_line_expressions.txt\"))):\n",
+    "        # To prevent storing common terms in the dictionary, sort expressions by those containing 'v'\n",
+    "        if 'v' in line:\n",
+    "            # Split the line so that the mode name can be used to create a dictionary entry\n",
+    "            name, expression = line.split('=') # Should not be more than one '=' per line!\n",
+    "            output.write(\"\\tmodes['%s'] = %s\\n\" % (name.strip(),expression.rstrip().replace(\"sp.pi\",\"np.pi\")))\n",
+    "        else:\n",
+    "            # For expressions not in the dictionary, just print the expression as-is\n",
+    "            output.write(\"\\t%s\\n\" % line.rstrip().replace(\"sp.pi\",\"np.pi\"))\n",
+    "    output.write(\"\\treturn modes\")\n",
+    "    # For testing\n",
+    "    output.write(\"\\ntest=compute_modes()\\n\")\n",
+    "    output.write(\"print(test['rho22v2'])\")"
    ]
   },
   {
@@ -330,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,40 +445,27 @@
     }
    ],
    "source": [
-    "# Get cmdline_helper; remove when this notebook is finalized and removed from in_progress\n",
-    "import sys\n",
-    "# insert at 1, 0 is the script path (or '' in REPL)\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-SEOBNR_Factorized_Modes\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
