NRPyPN: Add a fast p_t and p_r calculator on the index notebook. Also some small fixes

--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -74,15 +74,73 @@
     "    \n",
     "### Part 3: Quasicircular Orbital Parameters $p_t$ and $p_r$\n",
     "\n",
-    "+ [Tangential momentum $p_t$](PN-p_t.ipynb), as derived by \n",
+    "+ [Tangential component of momentum $p_t$](PN-p_t.ipynb), as derived by \n",
     "    * [Ramos-Buades, Husa, and Pratten (2018)](https://arxiv.org/abs/1810.00036) up to and including 3.5PN order\n",
     "        * ... and validated against [Healy, Lousto, Nakano, and Zlochower (2017)](https://arxiv.org/abs/1702.00872), who derive the expression up to and including 3PN order\n",
     "+ [Orbital angular frequency $M\\Omega$](PN-MOmega.ipynb), as derived by \n",
     "    * [Ramos-Buades, Husa, and Pratten (2018)](https://arxiv.org/abs/1810.00036) up to and including 3.5PN order\n",
     "        * ... and validated against [Healy, Lousto, Nakano, and Zlochower (2017)](https://arxiv.org/abs/1702.00872), who derive the expression up to and including 3PN order\n",
-    "+ [Radial momentum $p_r$](PN-p_r.ipynb), as derived by \n",
+    "+ [Radial component of momentum $p_r$](PN-p_r.ipynb), as derived by \n",
     "    * [Healy, Lousto, Nakano, and Zlochower (2017)](https://arxiv.org/abs/1702.00872) up to and including 3PN order\n",
     "    * [Ramos-Buades, Husa, and Pratten (2018)](https://arxiv.org/abs/1810.00036) up to and including 3.5PN order"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fast $p_t$ and $p_r$ for binary black hole initial data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P_t =  0.0793500403866190\n",
+      "P_r =  0.000542625716667722\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### INPUT PARAMETERS:\n",
+    "qmassratio =  2.0  # m2/m1; by convention must be >= 1\n",
+    "nr         = 10.8  # Orbital separation\n",
+    "# Dimensionless spin parameters of each black hole\n",
+    "nchi1x     = +0.   # chi_{1x}, x-component of spin vector for black hole 1\n",
+    "nchi1y     = +0.\n",
+    "nchi1z     = +0.\n",
+    "nchi2x     = -0.3535\n",
+    "nchi2y     = +0.3535\n",
+    "nchi2z     = +0.5\n",
+    "\n",
+    "#### DON'T TOUCH; see output after running this cell.\n",
+    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations\n",
+    "\n",
+    "# Compute p_t, the radial component of momentum\n",
+    "import PN_p_t as pt\n",
+    "pt.f_p_t(m1,m2, chi1U,chi2U, r)\n",
+    "\n",
+    "# Compute p_r, the radial component of momentum\n",
+    "import PN_p_r as pr\n",
+    "pr.f_p_r(m1,m2, n12U,n21U, chi1U,chi2U, S1U,S2U, p1U,p2U, r)\n",
+    "\n",
+    "nPt = num_eval(pt.p_t,\n",
+    "               qmassratio=qmassratio, nr=nr,\n",
+    "               nchi1x=nchi1x,nchi1y=nchi1y,nchi1z=nchi1z,\n",
+    "               nchi2x=nchi2x,nchi2y=nchi2y,nchi2z=nchi2z)\n",
+    "\n",
+    "np_r = num_eval(pr.p_r.subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421),\n",
+    "                qmassratio = qmassratio, nr=nr,\n",
+    "                nchi1x=nchi1x, nchi1y=nchi1y, nchi1z=nchi1z,\n",
+    "                nchi2x=nchi2x, nchi2y=nchi2y, nchi2z=nchi2z,  nPt=nPt)\n",
+    "\n",
+    "print(\"P_t = \",nPt)\n",
+    "print(\"P_r = \",np_r)"
    ]
   }
  ],
