Tutorial-BaikalETK: Replace ../edit/blah.py links to blah.py, so that Python files are clickable within nbviewer. Also add a more detailed description for the trA term in Tutorial-BSSN_time_evolution-BSSN_RHSs

--- a/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
@@ -200,7 +200,7 @@
     "$$\n",
     "\n",
     "\n",
-    "First, note that the term containing $\\bar{A}_{k}^{k}$ is there to enforce the $\\bar{A}_{k}^{k}=0$ condition, and was implemented in this form in T. Baumgarte's BSSN-in-spherical-coordinates code. You will find this term in [Brown](https://arxiv.org/abs/0902.3652)'s covariant formulation of the BSSN time-evolution equations (see third term in Eq 21a)."
+    "First, note that the term containing $\\bar{A}_{k}^{k}$ is there to drive $\\bar{A}_{k}^{k}$ to zero. It was implemented in this form in T. Baumgarte's BSSN-in-spherical-coordinates code, against which NRPy+ and SENR were originally validated. You will find this term in [Brown](https://arxiv.org/abs/0902.3652)'s covariant formulation of the BSSN time-evolution equations (see third term in Eq 21a)."
    ]
   },
   {
