--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -1165,11 +1165,6 @@
     "#   You are advised against modifying it directly; instead\n",
     "#   modify the Python code that generates it.\n",
     "\n",
-    "shares: ADMBase\n",
-    "USES CCTK_INT lapse_timelevels   # Needed to ensure ADMBase gridfunctions are allocated (see top of schedule.ccl)\n",
-    "USES CCTK_INT shift_timelevels   # Needed to ensure ADMBase gridfunctions are allocated (see top of schedule.ccl)\n",
-    "USES CCTK_INT metric_timelevels  # Needed to ensure ADMBase gridfunctions are allocated (see top of schedule.ccl)\n",
-    "\n",
     "EXTENDS CCTK_KEYWORD evolution_method \"evolution_method\"\n",
     "{\n",
     "  \"BaikalETK\" :: \"\"\n",
@@ -1420,8 +1415,10 @@
     "#   You are advised against modifying it directly; instead\n",
     "#   modify the Python code that generates it.\n",
     "\n",
-    "# First allocate storage for all ADMBase gridfunctions, which are needed by NRPy+\n",
-    "STORAGE: ADMBase::metric[metric_timelevels], ADMBase::curv[metric_timelevels], ADMBase::lapse[lapse_timelevels], ADMBase::shift[shift_timelevels]\n",
+    "# First allocate storage for one timelevel of ADMBase gridfunctions, which is the \n",
+    "#    bare minimum needed by NRPy+. If another thorn (e.g., ADMBase itself) requests\n",
+    "#    more timelevels of storage, Cactus automatically allocates the maximum requested.\n",
+    "STORAGE: ADMBase::metric[1], ADMBase::curv[1], ADMBase::lapse[1], ADMBase::shift[1]\n",
     "\n",
     "# Next allocate storage for all 3 gridfunction groups used in BaikalETK\n",
     "STORAGE: evol_variables[3]     # Evolution variables\n",
@@ -1483,11 +1480,6 @@
     "{\n",
     "  LANG: C\n",
     "} \"MoL: Compute T4UU, needed for BSSN RHSs.\"\n",
-    "\n",
-    "schedule BaikalETK_BSSN_to_ADM in MoL_CalcRHS after BaikalETK_T4UU before BaikalETK_Ricci\n",
-    "{\n",
-    "  LANG: C\n",
-    "} \"Perform BSSN-to-ADM conversion. Needed for HydroBase coupling.\"\n",
     "\"\"\"\n",
     "    outstr += \"\"\"\n",
     "schedule BaikalETK_driver_pt1_BSSN_Ricci in MoL_CalcRHS as BaikalETK_Ricci before BaikalETK_RHS\n",
@@ -1758,42 +1750,44 @@
     "  //     in their base names are forbidden in NRPy+).\n",
     "\"\"\"\n",
     "    outstr += \"\"\n",
-    "    for gf in full_gfs_list:\n",
+    "    for gfname in full_gfs_list:\n",
+    "        gfname_without_GFsuffix = gfname[:-2]\n",
     "        # Do not add T4UU gridfunctions if enable_stress_energy_source_terms==False:\n",
-    "        if not (enable_stress_energy_source_terms == False and \"T4UU\" in gf):\n",
+    "        if not (enable_stress_energy_source_terms == False and \"T4UU\" in gfname_without_GFsuffix):\n",
     "            outstr += \"\"\"\n",
     "  // Default to scalar symmetry:\n",
     "  sym[0] = 1; sym[1] = 1; sym[2] = 1;\n",
-    "  // Now modify sym[0], sym[1], and/or sym[2] as needed \n",
-    "  //    to account for gridfunction parity across \n",
+    "  // Now modify sym[0], sym[1], and/or sym[2] as needed\n",
+    "  //    to account for gridfunction parity across\n",
     "  //    x=0, y=0, and/or z=0 planes, respectively\n",
     "\"\"\"\n",
     "            # If gridfunction name does not end in a digit, by NRPy+ syntax, it must be a scalar\n",
-    "            if gf[len(gf) - 1].isdigit() == False:\n",
+    "            if gfname_without_GFsuffix[len(gfname_without_GFsuffix) - 1].isdigit() == False:\n",
+    "                outstr += \"      // (this gridfunction is a scalar -- no need to change default sym[]'s!)\\n\"\n",
     "                pass # Scalar = default\n",
-    "            elif len(gf) > 2:\n",
+    "            elif len(gfname_without_GFsuffix) > 2:\n",
     "                # Rank-1 indexed expression (e.g., vector)\n",
-    "                if gf[len(gf) - 2].isdigit() == False:\n",
-    "                    if int(gf[-1]) > 2:\n",
-    "                        print(\"Error: Found invalid gridfunction name: \"+gf)\n",
+    "                if gfname_without_GFsuffix[len(gfname_without_GFsuffix) - 2].isdigit() == False:\n",
+    "                    if int(gfname_without_GFsuffix[-1]) > 2:\n",
+    "                        print(\"Error: Found invalid gridfunction name: \"+gfname)\n",
     "                        sys.exit(1)\n",
-    "                    symidx = gf[-1]\n",
-    "                    outstr += \"  sym[\"+symidx+\"] = -1;\\n\"\n",
+    "                    symidx = gfname_without_GFsuffix[-1]\n",
+    "                    outstr += \"      sym[\" + symidx + \"] = -1;\\n\"\n",
     "                # Rank-2 indexed expression\n",
-    "                elif gf[len(gf) - 2].isdigit() == True:\n",
-    "                    if len(gf) > 3 and gf[len(gf) - 3].isdigit() == True:\n",
-    "                        print(\"Error: Found a Rank-3 or above gridfunction: \"+gf+\", which is at the moment unsupported.\")\n",
+    "                elif gfname_without_GFsuffix[len(gfname_without_GFsuffix) - 2].isdigit() == True:\n",
+    "                    if len(gfname_without_GFsuffix) > 3 and gfname_without_GFsuffix[len(gfname_without_GFsuffix) - 3].isdigit() == True:\n",
+    "                        print(\"Error: Found a Rank-3 or above gridfunction: \"+gfname+\", which is at the moment unsupported.\")\n",
     "                        print(\"It should be easy to support this if desired.\")\n",
     "                        sys.exit(1)\n",
-    "                    symidx0 = gf[-2]\n",
-    "                    outstr += \"  sym[\"+symidx0+\"] *= -1;\\n\"\n",
-    "                    symidx1 = gf[-1]\n",
-    "                    outstr += \"  sym[\"+symidx1+\"] *= -1;\\n\"\n",
+    "                    symidx0 = gfname_without_GFsuffix[-2]\n",
+    "                    outstr += \"      sym[\" + symidx0 + \"] *= -1;\\n\"\n",
+    "                    symidx1 = gfname_without_GFsuffix[-1]\n",
+    "                    outstr += \"      sym[\" + symidx1 + \"] *= -1;\\n\"\n",
     "            else:\n",
-    "                print(\"Don't know how you got this far with a gridfunction named \"+gf+\", but I'll take no more of this nonsense.\")\n",
+    "                print(\"Don't know how you got this far with a gridfunction named \"+gfname+\", but I'll take no more of this nonsense.\")\n",
     "                print(\"   Please follow best-practices and rename your gridfunction to be more descriptive\")\n",
     "                sys.exit(1)\n",
-    "            outstr += \"  SetCartSymVN(cctkGH, sym, \\\"BaikalETK::\"+gf+\"\\\");\\n\"\n",
+    "            outstr += \"      SetCartSymVN(cctkGH, sym, \\\"BaikalETK::\" + gfname + \"\\\");\\n\"\n",
     "    outstr += \"}\\n\"\n",
     "\n",
     "    # Add C code string to dictionary (Python dictionaries are immutable)\n",
@@ -1989,7 +1983,7 @@
     "        var_char_speed    = \"1.0\"\n",
     "        var_radpower      = \"1.0\"\n",
     "\n",
-    "        if gf == \"alpha\":\n",
+    "        if \"alpha\" in gf:\n",
     "            var_at_infinite_r = \"1.0\"\n",
     "            if LapseCondition == \"OnePlusLog\":\n",
     "                var_char_speed = \"sqrt(2.0)\"\n",
