--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -76,13 +76,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "from outputC import *\n",
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "import loop\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
+    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
+    "import loop as lp                # NRPy+: loop infrasructure\n",
+    "import shutil, os, sys, time     # Standard Python modules for multiplatform OS-level functions, benchmarking\n",
     "\n",
     "# Since we are writing an Einstein Toolkit thorn, we must set our memory access style to \"ETK\".\n",
     "par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
@@ -121,7 +123,7 @@
     "# *identical* expressions). You can expect \n",
     "# roundoff-level differences as a result.\n",
     "psis_CcodeKernel = fin.FD_outputC(\"returnstring\",scalars_lhrh,params=\"outCverbose=False,CSE_sorting=none\")\n",
-    "psis_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
+    "psis_looped = lp.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
     "                        [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",psis_CcodeKernel)\n",
     "with open(\"WeylScal4NRPy/src/WeylScal4NRPy_psis.h\", \"w\") as file:\n",
     "    file.write(str(psis_looped))\n",
@@ -153,7 +155,7 @@
     "                                                                # *identical* expressions). You can expect \n",
     "                                                                # roundoff-level differences as a result.\n",
     "\n",
-    "invars_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
+    "invars_looped = lp.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
     "                          [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",invars_CcodeKernel)\n",
     "\n",
     "with open(\"WeylScal4NRPy/src/WeylScal4NRPy_invars.h\", \"w\") as file:\n",
@@ -275,7 +277,6 @@
     "                NRPyJ1curv,NRPyJ2curv,\n",
     "                NRPyJ3curv,NRPyJ4curv);\n",
     "    }\n",
-    "\n",
     "}\n"
    ]
   },
