--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-staggered.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-staggered.ipynb
@@ -146,18 +146,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_StildeD0_source_term.h\n",
-      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_StildeD1_source_term.h\n",
-      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_StildeD2_source_term.h\n",
-      "Output C function calculate_Stilde_flux_D0_right() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_Stilde_flux_D0_right.h\n",
-      "Output C function calculate_Stilde_flux_D0_left() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_Stilde_flux_D0_left.h\n",
-      "Output C function calculate_Stilde_flux_D1_right() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_Stilde_flux_D1_right.h\n",
-      "Output C function calculate_Stilde_flux_D1_left() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_Stilde_flux_D1_left.h\n",
-      "Output C function calculate_Stilde_flux_D2_right() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_Stilde_flux_D2_right.h\n",
-      "Output C function calculate_Stilde_flux_D2_left() to file GiRaFFE_staggered_standalone_Ccodes/RHSs/calculate_Stilde_flux_D2_left.h\n",
-      "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_staggered_standalone_Ccodes/C2P/GiRaFFE_NRPy_cons_to_prims.h\n",
-      "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_staggered_standalone_Ccodes/C2P/GiRaFFE_NRPy_prims_to_cons.h\n"
+      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_StildeD2_source_term.h\n",
+      "Output C function calculate_Stilde_flux_D0_right() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D0_right.h\n",
+      "Output C function calculate_Stilde_flux_D0_left() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D0_left.h\n",
+      "Output C function calculate_Stilde_flux_D1_right() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D1_right.h\n",
+      "Output C function calculate_Stilde_flux_D1_left() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D1_left.h\n",
+      "Output C function calculate_Stilde_flux_D2_right() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D2_right.h\n",
+      "Output C function calculate_Stilde_flux_D2_left() to file GiRaFFE_staggered_standalone_Ccodes/RHSs\\calculate_Stilde_flux_D2_left.h\n",
+      "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_staggered_standalone_Ccodes/C2P\\GiRaFFE_NRPy_cons_to_prims.h\n",
+      "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_staggered_standalone_Ccodes/C2P\\GiRaFFE_NRPy_prims_to_cons.h\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'GiRaFFE_staggered_standalone_Ccodes/A2B\\\\compute_B_and_Bstagger_from_A.h'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -178,7 +188,12 @@
     "GiRaFFE_NRPy_RHSs(&params,auxevol_gfs,RK_INPUT_GFS,RK_OUTPUT_GFS);\"\"\",\n",
     "    post_RHS_string = \"\"\"\n",
     "GiRaFFE_NRPy_post_step(&params,xx,auxevol_gfs,RK_OUTPUT_GFS,n+1);\\n\"\"\",\n",
-    "    outdir = os.path.join(Ccodesdir,\"MoLtimestepping/\"))\n"
+    "    outdir = os.path.join(Ccodesdir,\"MoLtimestepping/\"))\n",
+    "\n",
+    "shutil.copy(\"Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.h\",os.path.join(Ccodesdir,\"RHSs\"))\n",
+    "shutil.copy(\"A_i_rhs_no_gauge_terms.h\",os.path.join(Ccodesdir,\"RHSs\"))\n",
+    "cmd.mkdir(os.path.join(Ccodesdir,\"A2B/\"))\n",
+    "shutil.copy(\"compute_B_and_Bstagger_from_A.h\",os.path.join(Ccodesdir,\"A2B\"))"
    ]
   },
   {
@@ -439,7 +454,7 @@
       "    gammaDD12:8, gammaDD22:9, gamma_faceDD00:4, gamma_faceDD01:5,\n",
       "    gamma_faceDD02:6, gamma_faceDD11:7, gamma_faceDD12:8, gamma_faceDD22:9,\n",
       "    psi6_temp:0, psi6center:0 )\n",
-      "Wrote to file \"GiRaFFE_standalone_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n"
+      "Wrote to file \"GiRaFFE_staggered_standalone_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n"
      ]
     }
    ],
@@ -714,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -724,43 +739,7 @@
      "output_type": "stream",
      "text": [
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -O2 -g -fopenmp GiRaFFE_staggered_standalone_Ccodes/GiRaFFE_NRPy_standalone.c -o GiRaFFE_staggered_standalone_Ccodes/output/GiRaFFE_NRPy_standalone -lm`...\n",
-      "In file included from GiRaFFE_staggered_standalone_Ccodes/GiRaFFE_NRPy_Main_Driver.h:18:0,\n",
-      "                 from GiRaFFE_staggered_standalone_Ccodes/GiRaFFE_NRPy_standalone.c:40:\n",
-      "GiRaFFE_staggered_standalone_Ccodes/../Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.h: In function ‘Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs’:\n",
-      "GiRaFFE_staggered_standalone_Ccodes/../Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.h:26:12: fatal error: GiRaFFE_standalone_Ccodes/set_Cparameters.h: No such file or directory\n",
-      "   #include \"GiRaFFE_standalone_Ccodes/set_Cparameters.h\"\n",
-      "            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "compilation terminated.\n",
-      "(BENCH): Finished executing in 0.20945215225219727 seconds.\n",
-      "Most safe failed. Removing -fopenmp:\n",
-      "(EXEC): Executing `gcc -O2 GiRaFFE_staggered_standalone_Ccodes/GiRaFFE_NRPy_standalone.c -o GiRaFFE_staggered_standalone_Ccodes/output/GiRaFFE_NRPy_standalone -lm`...\n",
-      "In file included from GiRaFFE_staggered_standalone_Ccodes/GiRaFFE_NRPy_Main_Driver.h:18:0,\n",
-      "                 from GiRaFFE_staggered_standalone_Ccodes/GiRaFFE_NRPy_standalone.c:40:\n",
-      "GiRaFFE_staggered_standalone_Ccodes/../Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.h: In function ‘Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs’:\n",
-      "GiRaFFE_staggered_standalone_Ccodes/../Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.h:26:12: fatal error: GiRaFFE_standalone_Ccodes/set_Cparameters.h: No such file or directory\n",
-      "   #include \"GiRaFFE_standalone_Ccodes/set_Cparameters.h\"\n",
-      "            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "compilation terminated.\n",
-      "(BENCH): Finished executing in 0.21002435684204102 seconds.\n",
-      "Sorry, compilation failed\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zetienne/jup38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3339: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "(EXEC): Executing `gcc -O2 -g -fopenmp GiRaFFE_staggered_standalone_Ccodes/GiRaFFE_NRPy_standalone.c -o GiRaFFE_staggered_standalone_Ccodes/output\\GiRaFFE_NRPy_standalone.exe -lm`...\n"
      ]
     }
    ],
@@ -792,24 +771,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "GiRaFFE_standalone_Ccodes\\output\\out119-00000000.txt not found.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-32c13f96bffa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mData_numer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"GiRaFFE_standalone_Ccodes\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"output\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"out119-00000000.txt\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;31m# Data_num_2 = np.loadtxt(os.path.join(\"GiRaFFE_standalone_Ccodes\",\"output\",\"out239-00000080.txt\"))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# Data_old = np.loadtxt(\"/home/penelson/OldCactus/Cactus/exe/ABE-GiRaFFEfood_1D_AlfvenWave/giraffe-grmhd_primitives_bi.x.asc\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\numpy\\lib\\npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[1;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows)\u001b[0m\n\u001b[0;32m    966\u001b[0m             \u001b[0mfname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos_fspath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    967\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0m_is_string_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 968\u001b[1;33m             \u001b[0mfh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_datasource\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rt'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    969\u001b[0m             \u001b[0mfencoding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'encoding'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'latin1'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    970\u001b[0m             \u001b[0mfh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0miter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\numpy\\lib\\_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[1;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[0;32m    267\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    268\u001b[0m     \u001b[0mds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataSource\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdestpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 269\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mds\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnewline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    270\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    271\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\numpy\\lib\\_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[1;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[0;32m    621\u001b[0m                                       encoding=encoding, newline=newline)\n\u001b[0;32m    622\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 623\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"%s not found.\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    624\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    625\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOSError\u001b[0m: GiRaFFE_standalone_Ccodes\\output\\out119-00000000.txt not found."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -1004,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
