Tutorial-LaTeX_SymPy_Conversion.ipynb: added raw string information

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "lexer = Lexer(); lexer.initialize('\\sqrt{5}(x + 2/3)^2')\n",
+    "lexer = Lexer(); lexer.initialize(r'\\sqrt{5}(x + 2/3)^2')\n",
     "print(', '.join(token for token in lexer.tokenize()))"
    ]
   },
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "expr = parse('\\sqrt{5}(x + 2/3)^2')\n",
+    "expr = parse(r'\\sqrt{5}(x + 2/3)^2')\n",
     "print(expr, ':', srepr(expr))"
    ]
   },
@@ -146,14 +146,14 @@
     }
    ],
    "source": [
-    "print(parse('\\sqrt[3]{5}'))"
+    "print(parse(r'\\sqrt[3]{5}'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the sandbox code cell below, you can experiment with the LaTeX parser using the wrapper function: parse(sentence)"
+    "In the sandbox code cell below, you can experiment with the LaTeX parser using the wrapper function parse(sentence), where sentence must be a [raw string](https://docs.python.org/3/reference/lexical_analysis.html) to interpret a backslash as a literal character rather than an [escape sequence](https://en.wikipedia.org/wiki/Escape_sequence)."
    ]
   },
   {
