latex_parser.py: added frac command

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -56,6 +56,7 @@
     "<NUMBER>     -> <RATIONAL> | <DECIMAL> | <INTEGER>\n",
     "<COMMAND>    -> \\ ( <SQRT> | ... )\n",
     "<SQRT>       -> sqrt { [<INTEGER>] } \\{<EXPRESSION>\\}\n",
+    "<FRAC>       -> frac \\{<EXPRESSION>\\} \\{<EXPRESSION>\\}\n",
     "```\n",
     "\n",
     "<small>**Source**: Robert W. Sebesta. Concepts of Programming Languages. Pearson Education Limited, 2016.</small>"
