Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4: declare L_MAX as a global, to ensure it's consistent with the values set in the Jupyter notebook

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -163,6 +163,12 @@
     "#              SymTP, SinhSymTP\n",
     "CoordSystem     = \"SinhSpherical\"\n",
     "\n",
+    "# Decompose psi_4 (second time derivative of gravitational\n",
+    "#                  wave strain) into all spin-weight=-2\n",
+    "#                  l,m spherical harmonics, starting at l=2\n",
+    "#                  going up to and including l_max, set here:\n",
+    "l_max = 2\n",
+    "\n",
     "if EvolOption == \"low resolution\":\n",
     "    # domain_size sets the default value for:\n",
     "    #   * Spherical's params.RMAX\n",
@@ -332,7 +338,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 3.2433362007141113 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 3.4359800815582275 seconds.\n"
      ]
     }
    ],
@@ -546,7 +552,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for psi4...\n",
-      "(BENCH) Finished psi4 symbolic expressions in 14.367764949798584 seconds.\n",
+      "(BENCH) Finished psi4 symbolic expressions in 15.027058839797974 seconds.\n",
       "Output C function psi4() to file BSSN_Two_BHs_Collide_Ccodes/psi4.h\n"
      ]
     }
@@ -680,8 +686,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l_max = 2\n",
-    "\n",
     "import SpinWeight_minus2_SphHarmonics.SpinWeight_minus2_SphHarmonics as swm2\n",
     "cmd.mkdir(os.path.join(Ccodesdir,\"SpinWeight_minus2_SphHarmonics\"))\n",
     "swm2.SpinWeight_minus2_SphHarmonics(maximum_l=l_max,\n",
@@ -719,7 +723,7 @@
     "%%writefile $Ccodesdir/driver_psi4_spinweightm2_decomposition.h\n",
     "\n",
     "void driver_psi4_spinweightm2_decomposition(const paramstruct *restrict params, \n",
-    "                                            const REAL curr_time,const int R_ext_idx, const int l_max,\n",
+    "                                            const REAL curr_time,const int R_ext_idx,\n",
     "                                            REAL *restrict xx[3],\n",
     "                                            const REAL *restrict y_n_gfs,\n",
     "                                            REAL *restrict diagnostic_output_gfs) {\n",
@@ -810,11 +814,11 @@
     "%%writefile $Ccodesdir/lowlevel_decompose_psi4_into_swm2_modes.h\n",
     "\n",
     "void lowlevel_decompose_psi4_into_swm2_modes(const paramstruct *restrict params, \n",
-    "            const REAL curr_time, const REAL R_ext, const int l_max, \n",
+    "            const REAL curr_time, const REAL R_ext,\n",
     "            const REAL *restrict th_array,const REAL *restrict sinth_array,const REAL *restrict ph_array,\n",
     "            const REAL *restrict psi4r_at_R_ext,const REAL *restrict psi4i_at_R_ext) {\n",
     "    #include \"set_Cparameters.h\"\n",
-    "    for(int l=2;l<=l_max;l++) {\n",
+    "    for(int l=2;l<=L_MAX;l++) { // L_MAX is a global variable, since it must be set in Python (so that SpinWeight_minus2_SphHarmonics() computes enough modes)\n",
     "        for(int m=-l;m<=l;m++) {\n",
     "            // Parallelize the integration loop:\n",
     "            REAL psi4r_l_m = 0.0;\n",
@@ -878,8 +882,8 @@
    "source": [
     "%%writefile -a $Ccodesdir/driver_psi4_spinweightm2_decomposition.h\n",
     "\n",
-    "    // Step 4: Perform integrations across all l,m modes from l=2 up to and including l_max:\n",
-    "    lowlevel_decompose_psi4_into_swm2_modes(params, curr_time,R_ext,l_max, th_array,sinth_array, ph_array, \n",
+    "    // Step 4: Perform integrations across all l,m modes from l=2 up to and including L_MAX (global variable):\n",
+    "    lowlevel_decompose_psi4_into_swm2_modes(params, curr_time,R_ext, th_array,sinth_array, ph_array, \n",
     "                                            psi4r_at_R_ext,psi4i_at_R_ext);\n",
     "\n",
     "    // Step 5: Free all allocated memory:\n",
@@ -907,8 +911,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for psi4_re_pt0 in SinhSpherical coordinates.Generating C code for psi4_re_pt1 in SinhSpherical coordinates.Generating C code for psi4_re_pt2 in SinhSpherical coordinates.Generating C code for psi4_im_pt0 in SinhSpherical coordinates.Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for psi4_im_pt2 in SinhSpherical coordinates.Generating C code for BSSN RHSs in SinhSpherical coordinates.Generating C code for psi4_im_pt1 in SinhSpherical coordinates.Generating C code for Ricci tensor in SinhSpherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "\n",
+      "Generating C code for psi4_re_pt1 in SinhSpherical coordinates.Generating C code for psi4_re_pt0 in SinhSpherical coordinates.Generating C code for psi4_re_pt2 in SinhSpherical coordinates.Generating C code for psi4_im_pt1 in SinhSpherical coordinates.Generating C code for psi4_im_pt0 in SinhSpherical coordinates.Generating C code for psi4_im_pt2 in SinhSpherical coordinates.Generating C code for BSSN RHSs in SinhSpherical coordinates.Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
+      "Generating C code for Ricci tensor in SinhSpherical coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "\n",
       "\n",
@@ -917,22 +922,21 @@
       "\n",
       "\n",
       "\n",
-      "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.1282496452331543 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt1 in 10.302468538284302 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt2 in 13.370474576950073 seconds.\n",
-      "(BENCH) Finished BL initial data codegen in 13.70315408706665 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.1379539966583252 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt1 in 10.434067010879517 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt2 in 13.65636396408081 seconds.\n",
+      "(BENCH) Finished BL initial data codegen in 13.811407566070557 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 16.03170084953308 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt2 in 17.54340934753418 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt1 in 18.838257312774658 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 16.434835195541382 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt2 in 17.97291326522827 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt1 in 19.26844573020935 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 19.07672381401062 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt0 in 32.56605124473572 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 19.39406657218933 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt0 in 33.22525334358215 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 34.464335918426514 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt0 in 56.19235920906067 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 34.449371099472046 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt0 in 56.271851778030396 seconds.\n"
      ]
     }
    ],
@@ -1094,7 +1098,12 @@
     "//            numbers are stored to at least ~16 significant digits\n",
     "#define REAL \"\"\"+REAL+\"\"\"\n",
     "// Part P0.c: Set the number of ghost cells, from NRPy+'s FD_CENTDERIVS_ORDER\n",
-    "REAL CFL_FACTOR = \"\"\"+str(CFL_FACTOR)+\"\"\"; // Set the CFL Factor. Can be overwritten at command line.\"\"\")"
+    "REAL CFL_FACTOR = \"\"\"+str(CFL_FACTOR)+\"\"\"; // Set the CFL Factor. Can be overwritten at command line.\n",
+    "// Part P0.d: We decompose psi_4 into all spin-weight=-2\n",
+    "//            l,m spherical harmonics, starting at l=2,\n",
+    "//            going up to and including l_max, set here:\n",
+    "#define L_MAX \"\"\"+str(l_max)+\"\"\"\n",
+    "\"\"\")"
    ]
   },
   {
@@ -1349,7 +1358,7 @@
     "                r_ext_idx<(Nxx_plus_2NGHOSTS0-NGHOSTS)*0.9;\n",
     "                r_ext_idx+=5) {\n",
     "                // psi_4 mode-by-mode spin-weight -2 spherical harmonic decomposition routine\n",
-    "                driver_psi4_spinweightm2_decomposition(&params, ((REAL)n)*dt,r_ext_idx,l_max,\n",
+    "                driver_psi4_spinweightm2_decomposition(&params, ((REAL)n)*dt,r_ext_idx,\n",
     "                                                       xx, y_n_gfs, diagnostic_output_gfs);\n",
     "            }\n",
     "        }\n",
@@ -1438,17 +1447,17 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BrillLindquist_Playground -lm`...\n",
-      "(BENCH): Finished executing in 9.027631759643555 seconds.\n",
+      "(BENCH): Finished executing in 9.636179447174072 seconds.\n",
       "Finished compilation.\n",
-      "(BENCH) Finished in 9.03900408744812 seconds.\n",
+      "(BENCH) Finished in 9.648973941802979 seconds.\n",
       "\n",
       "\n",
       "Now running. Should take ~30 minutes...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 270 8 2 1.0`...\n",
-      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 2647.64 | gp/s 1.73e+066\n",
-      "(BENCH): Finished executing in 272.1320250034332 seconds.\n",
-      "(BENCH) Finished in 272.14853954315186 seconds.\n",
+      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 2383.93 | gp/s 1.56e+066\n",
+      "(BENCH): Finished executing in 302.166796207428 seconds.\n",
+      "(BENCH) Finished in 302.1968021392822 seconds.\n",
       "\n",
       "\n"
      ]
