Tutorial-ETK_thorn-IDScalarWaveNRPy, Tutorial-Start_to_Finish-ScalarWaveCurvilinear: Update formatting. No functional change

--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -72,12 +72,12 @@
     "#         for the scalar wave initial data into a C-code kernel\n",
     "\n",
     "# Step 1a: Import needed NRPy+ core modules:\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "from outputC import *\n",
-    "import loop\n",
+    "import NRPy_param_funcs as par  # NRPy+: Parameter interface\n",
+    "import indexedexp as ixp        # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import grid as gri              # NRPy+: Functionality for handling numerical grids\n",
+    "import finite_difference as fin # NRPy+: Finite difference C code generation module\n",
+    "from outputC import *           # NRPy+: Core C code output module\n",
+    "import loop                     # NRPy+: Generate C code loops\n",
     "\n",
     "# Step 1b: This is an Einstein Toolkit (ETK) thorn. Here we\n",
     "#          tell NRPy+ that gridfunction memory access will \n",
