--- a/Tutorial-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-ScalarWaveCurvilinear.ipynb
@@ -213,10 +213,11 @@
     }
    ],
    "source": [
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import reference_metric as rfm\n",
+    "import sympy as sp              # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import NRPy_param_funcs as par  # NRPy+: Parameter interface\n",
+    "import grid as gri              # NRPy+: Functionality for handling numerical grids\n",
+    "import indexedexp as ixp        # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm  # NRPy+: Reference metric support\n",
     "\n",
     "# reference_metric::CoordSystem can be set to Spherical, SinhSpherical, SinhSphericalv2, \n",
     "#                           Cylindrical, SinhCylindrical, SinhCylindricalv2, etc.\n",
