Tutorial-ScalarWave.ipynb: Give Thiago credit for the spherical Gaussian soln section

--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Generating C Code for the Scalar Wave Equation in Cartesian Coordinates\n",
     "\n",
-    "## Author: Zach Etienne\n",
+    "## Authors: Zach Etienne & Thiago Assumpção\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
     "## This module generates the C Code for the Scalarwave in Cartesian coordinates and sets up [Plane Wave Initial Data](https://en.wikipedia.org/wiki/Initial_value_problem). \n",
@@ -116,7 +116,7 @@
     "    1. [Step 3.a](#code_validation1): Code Validation against `ScalarWave.ScalarWave_RHSs` NRPy+ module\n",
     "1. [Step 4](#id): Setting up Initial Data for the Scalar Wave Equation\n",
     "    1. [Step 4.a](#planewave): The Monochromatic Plane-Wave Solution\n",
-    "    1. [Step 4.b](#sphericalgaussian): The Spherical Gaussian Solution\n",
+    "    1. [Step 4.b](#sphericalgaussian): The Spherical Gaussian Solution (*Courtesy Thiago Assumpção*)\n",
     "1. [Step 5](#code_validation2): Code Validation against `ScalarWave.InitialData` NRPy+ module\n",
     "1. [Step 6](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
@@ -579,7 +579,7 @@
    "source": [
     "<a id='sphericalgaussian'></a>\n",
     "\n",
-    "## Step 4.b: The Spherical Gaussian Solution \\[Back to [top](#toc)\\]\n",
+    "## Step 4.b: The Spherical Gaussian Solution (*Courtesy Thiago Assumpção*) \\[Back to [top](#toc)\\]\n",
     "$$\\label{sphericalgaussian}$$\n",
     "\n",
     "Here we will implement the (outgoing) spherical Gaussian solution:\n",
